@@ -21,7 +21,7 @@
 #ifndef lint
 static	char sccsid[] = "@(#)ircd.c	2.48 3/9/94 (C) 1988 University of Oulu, \
 Computing Center and Jarkko Oikarinen";
-static char *rcs_version="$Id: ircd.c,v 1.34 1999/02/15 03:05:16 db Exp $";
+static char *rcs_version="$Id: ircd.c,v 1.35 1999/02/16 06:04:40 db Exp $";
 #endif
 
 #include "struct.h"
@@ -1535,7 +1535,9 @@ time_t io_loop(time_t delay)
     }
   if((timeofday = time(NULL)) == -1)
     {
+#ifdef USE_SYSLOG
       syslog(LOG_WARNING, "Clock Failure (%d), TS can be corrupted", errno);
+#endif
       sendto_ops("Clock Failure (%d), TS can be corrupted", errno);
     }
 
